<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              tools:context=".MainActivity" android:weightSum="1">


    <EditText
            android:id="@+id/editTextUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/type_something"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/httpGetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/httpGetBtn_text"
            android:layout_gravity="left"/>

    <TextView
            android:id="@+id/responseLabel"
            android:text="@string/responseLabel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible"
            android:layout_weight="0.02"/>
    <TextView
            android:id="@+id/httpResponseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="3dp"
            android:text="@string/httpResponse_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.16"
            android:visibility="visible"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/cleanResultTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/cleanResultTextBtn_text"/>
</LinearLayout>
